--- a/D2.html
+++ b/D2.html
@@ -69,186 +69,165 @@
 <div class="container-md">
     <div class="row">
         <div class="col-12">
-            <div class="section-heading h2">
+            <div class="text-center">
                 <h2>Album Gallery</h2>
             </div>
         </div>
     </div>
-
+    
     <div class="row">
         <!-- Single Album Area -->
         <div class="col-6 col-sm-6 col-md-4 col-lg-3">
             <div class="single-album-area wow fadeInUp ">
                 <img alt="picture" src="img/1.jpg" class="img">
                     <!-- Play Icon -->
-                    <div class="play-icon">
-                        <a href="#" class="video--play--btn"><span class="icon-play-button"></span></a>
-                    </div>
+                    <figcaption class="figure-caption">AC/DC – Back in Black</figcaption>
                 </div>
-                <div class="album-info">
+                <!-- <div class="album-info">
                     <a href="#">
                         <h6>AC/DC – Back in Black</h6>
                     <a></a>
-                </div>
+                </div> -->
          </div>
          <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-            <div class="single-album-area wow fadeInUp">
+            <figure class="figure">
                 <img alt="picture" src="img/2.jpg" class="img">
                     <!-- Play Icon -->
-                    <div class="play-icon">
-                        <a href="#" class="video--play--btn"><span class="icon-play-button"></span></a>
-                    </div>
-                </div>
-                <div class="album-info">
+                    <figcaption class="figure-caption">Led Zeppelin – Led Zeppelin</figcaption>
+                </figure>
+                <!-- <div class="album-info">
                     <a href="#">
                         <h6>Led Zeppelin – Led Zeppelin</h6>
                     <a></a>
-                </div>
+                </div> -->
          </div>
          <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-            <div class="single-album-area wow fadeInUp">
+            <figure class="figure">
                 <img alt="picture" src="img/3.jpg" class="img">
                     <!-- Play Icon -->
-                    <div class="play-icon">
-                        <a href="#" class="video--play--btn"><span class="icon-play-button"></span></a>
-                    </div>
-                </div>
-                <div class="album-info">
+                    <figcaption class="figure-caption">Madonna – True Blue</figcaption>
+                </figure>
+                <!-- <div class="album-info">
                     <a href="#">
                         <h6>Madonna – True Blue</h6>
                     <a></a>
-                </div>
+                </div> -->
          </div>
          <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-            <div class="single-album-area wow fadeInUp">
+            <figure class="figure">
                 <img alt="picture" src="img/4.jpg" class="img">
                     <!-- Play Icon -->
-                    <div class="play-icon">
-                        <a href="#" class="video--play--btn"><span class="icon-play-button"></span></a>
-                    </div>
-                </div>
-                <div class="album-info">
+                    <figcaption class="figure-caption">The Clash – London Calling</figcaption>
+                </figure>
+                <!-- <div class="album-info">
                     <a href="#">
                         <h6>The Clash – London Calling</h6>
                     <a></a>
-                </div>
+                </div> -->
          </div>
          <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-            <div class="single-album-area wow fadeInUp">
+            <figure class="figure">
                 <img alt="picture" src="img/5.jpg" class="img">
                     <!-- Play Icon -->
-                    <div class="play-icon">
-                        <a href="#" class="video--play--btn"><span class="icon-play-button"></span></a>
-                    </div>
-                </div>
-                <div class="album-info">
+                    <figcaption class="figure-caption">David Bowie – Aladdin Sane</figcaption>
+                </figure>
+                <!-- <div class="album-info">
                     <a href="#">
                         <h6>David Bowie – Aladdin Sane</h6>
                     <a></a>
-                </div>
+                </div> -->
          </div>
          <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-            <div class="single-album-area wow fadeInUp">
+            <figure class="figure">
                 <img alt="picture" src="img/6.jpg" class="img">
                     <!-- Play Icon -->
-                    <div class="play-icon">
-                        <a href="#" class="video--play--btn"><span class="icon-play-button"></span></a>
-                    </div>
-                </div>
-                <div class="album-info">
+                    <figcaption class="figure-caption">The Notorious BIG – Ready to Die</figcaption>
+                </figure>
+                <!-- <div class="album-info">
                     <a href="#">
                         <h6>The Notorious BIG – Ready to Die</h6>
                     <a></a>
-                </div>
+                </div> -->
          </div>
          <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-            <div class="single-album-area wow fadeInUp">
+            <figure class="figure">
                 <img alt="picture" src="img/7.jpg" class="img">
                     <!-- Play Icon -->
-                    <div class="play-icon">
-                        <a href="#" class="video--play--btn"><span class="icon-play-button"></span></a>
-                    </div>
-                </div>
-                <div class="album-info">
+                    <figcaption class="figure-caption">Nas – Illmatic</figcaption>
+                </figure>
+                <!-- <div class="album-info">
                     <a href="#">
                         <h6>Nas – Illmatic</h6>
                     <a></a>
-                </div>
+                </div> -->
          </div>
          <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-            <div class="single-album-area wow fadeInUp">
+            <figure class="figure">
                 <img alt="picture" src="img/8.jpg" class="img">
                     <!-- Play Icon -->
-                    <div class="play-icon">
-                        <a href="#" class="video--play--btn"><span class="icon-play-button"></span></a>
-                    </div>
-                </div>
-                <div class="album-info">
+                    <figcaption class="figure-caption">Kate Bush – The Dreaming</figcaption>
+                </figure>
+                <!-- <div class="album-info">
                     <a href="#">
                         <h6>Kate Bush – The Dreaming</h6>
                     <a></a>
-                </div>
+                </div> -->
          </div>
          <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-            <div class="single-album-area wow fadeInUp">
+            <figure class="figure">
                 <img alt="picture" src="img/9.jpg" class="img">
                     <!-- Play Icon -->
-                    <div class="play-icon">
-                        <a href="#" class="video--play--btn"><span class="icon-play-button"></span></a>
-                    </div>
-                </div>
-                <div class="album-info">
+                    <figcaption class="figure-caption">Oasis – Definitely Maybe</figcaption>
+                </figure>
+                <!-- <div class="album-info">
                     <a href="#">
                         <h6>Oasis – Definitely Maybe</h6>
                     <a></a>
-                </div>
+                </div> -->
          </div>
          <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-            <div class="single-album-area wow fadeInUp">
+            <figure class="figure">
                 <img alt="picture" src="img/10.jpg" class="img">
                     <!-- Play Icon -->
-                    <div class="play-icon">
-                        <a href="#" class="video--play--btn"><span class="icon-play-button"></span></a>
-                    </div>
-                </div>
-                <div class="album-info">
+                    <figcaption class="figure-caption">Rolling Stones – Sticky Fingers</figcaption>
+                </figure>
+                <!-- <div class="album-info">
                     <a href="#">
                         <h6>Rolling Stones – Sticky Fingers</h6>
                     <a></a>
-                </div>
+                </div> -->
          </div>
          <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-            <div class="single-album-area wow fadeInUp">
+            <figure class="figure">
                 <img alt="picture" src="img/11.jpg" class="img">
                     <!-- Play Icon -->
-                    <div class="play-icon">
-                        <a href="#" class="video--play--btn"><span class="icon-play-button"></span></a>
-                    </div>
-                </div>
-                <div class="album-info">
+                    <figcaption class="figure-caption">Miles Davis – Bitches Brew</figcaption>
+                </figure>
+                <!-- <div class="album-info">
                     <a href="#">
                         <h6>Miles Davis – Bitches Brew</h6>
                     <a></a>
-                </div>
+                </div> -->
          </div>
          <div class="col-6 col-sm-6 col-md-4 col-lg-3">
-            <div class="single-album-area wow fadeInUp">
+            <figure class="figure">
                 <img alt="picture" src="img/12.jpeg" class="img">
                     <!-- Play Icon -->
-                    <div class="play-icon">
-                        <a href="#" class="video--play--btn"><span class="icon-play-button"></span></a>
-                    </div>
-                </div>
-                <div class="album-info">
+                    <figcaption class="figure-caption">Patti Smith – Horses</figcaption>
+                </figure>
+                <!-- <div class="album-info">
                     <a href="#">
                         <h6>Patti Smith – Horses</h6>
                     <a></a>
-                </div>
+                </div> -->
          </div>
 
          
      </div>
 
+</div>
+<div class="container-fluid">
+   <div class="row"></div>
 </div>
 
 <!-- <div class="container-fluid faveAlbum">
@@ -258,13 +237,6 @@
 
 </div> -->
 
-    <!-- EXERCISE 4
-            Create a Responsive section for your favourite albums.
-            In this section you should have:
-            - 4 albums per row when the screen is very large
-            - 3 albums per row when you are on a tablet (or a smaller window)
-            - 2 albums per row when you are on a small screen
-        -->
 
     <!-- EXERCISE 5
             Create a section for the album review.
@@ -278,10 +250,7 @@
             - ... And whatever you think it's interesting about it!
         -->
 
-    <!-- EXERCISE 6
-            Worst album list! Find out the music you don't really like or you find overrated and list it
-            in this "hall of shame" chart!
-        -->
+
 
     <!-- EXERCISE 7
             Do you have any musician / band you admire or you are fan of?
